--- a/resources/Styles/dropdown.css
+++ b/resources/Styles/dropdown.css
@@ -1,6 +1,7 @@
 /* Style The Dropdown Button */
 .dropbtn {
     cursor: auto;
+    color: var(--isabeline);
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -13,7 +14,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: var(--isabeline);
     min-width: 120px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -23,14 +24,14 @@
 /* Links inside the dropdown */
 .dropdown-content a {
     position: relative;
-    color: black;
+    color: var(--space_cadet_bis);
     text-decoration: none;
     display: block;
 }
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
-    background-color: #f1f1f1
+    background-color: var(--isabeline)
 }
 
 /* Show the dropdown menu on hover */
